Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2013-02-27 (SVN):
    * codecs: rename CODECTYPE_OGG to CODECTYPE_VORBIS, because ogg is
      just the container. adjust all other sources and headers for it.
    * snd_vorbis.c: reject files with more than one streams. (maybe we
      add section change handling in the future, but not supported now.)

2013-02-27 (SVN):
    * docs/README: small updates.

2013-02-27 (SVN):
    * view.c (V_UpdatePalette): call V_CalcPowerupCshift() only when
      fully connected to the server, otherwise zero the cl.cshifts
      array. this clears the left-over colors from area contents or
      used powerup items in software renderer. opengl renderer is not
      affected, because it does not actually touch the palette.
    * updated version date stamp to 2013-02-27.

2013-02-27 (SVN):
    * docs/README: add fov_adapt to documentation.

2013-02-27 (SVN):
    * oslibs,windows: update dinput.h from mingw-w64 svn repo rev.5620.

2013-02-25 (SVN):
    * r_main.c (R_ViewChanged): when fov_adapt is in effect, calculate
      the yscale global using the properly computed verticalFieldOfView
      and not by multiplying xscale with pixelAspect which is set to 1:
      fixes d_sprite.c crashes and negative ymin warning messages when
      r_waterwarp is in effect. also fixes underwater geometry with bad
      y-scale when r_waterwarp is in effect. Hor+ fov scaling now works
      just fairly with the software renderer.

2013-02-25 (SVN):
    * partly fix the bad interaction between r_waterwarp and fov_adapt
      (there is still an issue of "D_DrawSprite: ymin: -xx" messages
      appearing upon jumping into water with fov_adapt enabled and a
      crash in d_sprite.c:332:D_SpriteDrawTransSpans(), which should be
      fixed):
    * r_main.c (R_ViewChanged): do not call R_SetVrect() from here and
      lose the *pvrect and lineadjust params.