@@ -90,6 +90,7 @@ void S_CodecUtilClose(snd_stream_t **stream);
 #define CODECTYPE_WAV		(1U << 3)
 #define CODECTYPE_MP3		(1U << 4)
 #define CODECTYPE_VORBIS	(1U << 5)
+#define CODECTYPE_OPUS		(1U << 6)
 
 #define CODECTYPE_WAVE		CODECTYPE_WAV
 #define CODECTYPE_MIDI		CODECTYPE_MID
