@@ -1,7 +1,7 @@
 /* Ogg/Vorbis streaming music support. */
 
 #if !defined(_SND_VORBIS_H_)
-#define _SND_VORBIS_H_
+#define _SND_VORBIS_H_ 1
 
 #if defined(USE_CODEC_VORBIS)
 
