@@ -50,6 +50,7 @@ USE_CDAUDIO=yes
 USE_CODEC_WAVE=yes
 USE_CODEC_MP3=yes
 USE_CODEC_VORBIS=yes
+USE_CODEC_OPUS=no
 # either timidity or wildmidi (both possible
 # but not needed nor meaningful)
 USE_CODEC_TIMIDITY=yes
@@ -141,6 +142,7 @@ USE_CODEC_TIMIDITY=no
 USE_CODEC_WILDMIDI=no
 USE_CODEC_MP3=no
 USE_CODEC_VORBIS=no
+USE_CODEC_OPUS=no
 endif
 # sanity checking for decoder library options
 ifneq ($(VORBISLIB),vorbis)
@@ -182,6 +184,14 @@ CPPFLAGS+= -DNO_SUN_AUDIO
 CPPFLAGS+= -DNO_SDL_AUDIO
 endif
 
+ifeq ($(USE_CODEC_OPUS),yes)
+# opus and opusfile put their *.h under <includedir>/opus,
+# but they include the headers without the opus directory
+# prefix and rely on pkg-config. ewww...
+INCLUDES+= $(shell pkg-config --cflags opusfile)
+LDFLAGS += $(shell pkg-config --libs   opusfile)
+endif
+
 # End of Unix settings
 #############################################################
 
@@ -206,6 +216,9 @@ cpp_vorbisdec=-DVORBIS_USE_TREMOR
 lib_vorbisdec=-lvorbisidec -logg
 endif
 
+ifeq ($(USE_CODEC_OPUS),yes)
+CPPFLAGS+= -DUSE_CODEC_OPUS
+endif
 ifeq ($(USE_CODEC_WAVE),yes)
 CPPFLAGS+= -DUSE_CODEC_WAVE
 endif
@@ -319,6 +332,7 @@ MUSIC_OBJS:= bgmusic.o \
 	snd_codec.o \
 	snd_wave.o \
 	snd_vorbis.o \
+	snd_opus.o \
 	$(mp3_obj) \
 	snd_timidity.o \
 	snd_wildmidi.o
