@@ -25,6 +25,9 @@ Changes in v1.5.6: (Feb. 27, 2013.)
 
 - Mac OS X: A new icon.
 
+- Music: Support for Opus codec. (edit the makefiles to enable it when
+  compiling.)
+
 - HexenWorld: opengl fixes for the shownames feature, other gl updates.
 
 - Software renderer: fixed color shifts from area contents or power-up
