@@ -4,6 +4,11 @@ Development Progress	:
 ---------------------------
 
 2013-02-27 (SVN):
+    * codecs: add support for the Opus file decoding, which works just
+      fine. it is not enabled by default, but editing the Makefile for
+      USE_CODEC_OPUS will do it.
+
+2013-02-27 (SVN):
     * codecs: rename CODECTYPE_OGG to CODECTYPE_VORBIS, because ogg is
       just the container. adjust all other sources and headers for it.
     * snd_vorbis.c: reject files with more than one streams. (maybe we
